--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "formik": "^2.2.6",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "yup": "^0.32.8"
   },
   "devDependencies": {
@@ -24,6 +27,7 @@
     "@react-native-community/eslint-config": "^1.1.0",
     "@types/jest": "^25.2.3",
     "@types/react-native": "^0.63.2",
+    "@types/react-redux": "^7.1.16",
     "@types/react-test-renderer": "^16.9.2",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
