--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.9.2",
+    "@react-navigation/stack": "^5.14.2",
     "firebase": "^8.2.5",
     "formik": "^2.2.6",
     "react": "16.13.1",
