--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@react-navigation/stack": "^5.14.2",
     "firebase": "^8.2.5",
     "formik": "^2.2.6",
+    "i18next": "^19.8.7",
     "react": "16.13.1",
+    "react-i18next": "^11.8.6",
     "react-native": "0.63.4",
     "react-native-gesture-handler": "^1.10.0",
+    "react-native-localize": "^2.0.1",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.1",
