--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "16.13.1",
     "react-i18next": "^11.8.6",
     "react-native": "0.63.4",
+    "react-native-camera": "^3.42.2",
     "react-native-gesture-handler": "^1.10.0",
     "react-native-localize": "^2.0.1",
     "react-native-reanimated": "^1.13.2",
