change import image

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,6 +40,7 @@
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-non-null-assertion": "off",
     "@typescript-eslint/ban-ts-ignore": "off",
+    "@typescript-eslint/no-var-requires": 0,
     "no-console": "warn",
     "no-param-reassign": "error",
     "no-empty": ["warn", { "allowEmptyCatch": true }],
