--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,19 +1,9 @@
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-platform :ios, '10.0'
+platform :ios, '11.0'
 
 target 'ReactNativeAppTS' do
-  pod 'React', :path => '../node_modules/react-native', :subspecs => [
-    'Core',
-    'CxxBridge', # Include this for RN >= 0.47
-    'DevSupport', # Include this to enable In-App Devmenu if RN >= 0.43
-    'RCTText',
-    'RCTNetwork',
-    'RCTWebSocket', # Needed for debugging
-    'RCTAnimation', # Needed for FlatList and animations running on native UI thread
-    # Add any other subspecs you want to use in your project
-  ]
 
   config = use_native_modules!
 
@@ -29,12 +19,12 @@ target 'ReactNativeAppTS' do
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable these next few lines.
   use_flipper!
-  post_install do |installer|
-    flipper_post_install(installer)
-  end
+  # post_install do |installer|
+  #  flipper_post_install(installer)
+  # end
 end
 
-pod 'yoga', :path => '../node_modules/react-native/ReactCommon/yoga'
+pod 'Yoga', :path => '../node_modules/react-native/ReactCommon/yoga'
 
 pod 'react-native-camera', path: '../node_modules/react-native-camera'
 
@@ -44,12 +34,4 @@ post_install do |installer|
       target.remove_from_project
     end
   end
-
-target 'ReactNativeAppTS-tvOS' do
-  # Pods for ReactNativeAppTS-tvOS
-
-  target 'ReactNativeAppTS-tvOSTests' do
-    inherit! :search_paths
-    # Pods for testing
-  end
-end
+ end
