--- a/package.json
+++ b/package.json
@@ -43,8 +43,13 @@
     "@types/react-native": "^0.63.2",
     "@types/react-redux": "^7.1.16",
     "@types/react-test-renderer": "^16.9.2",
+    "@typescript-eslint/eslint-plugin": "^4.29.3",
     "babel-jest": "^25.1.0",
-    "eslint": "^7.14.0",
+    "eslint": "^7.32.0",
+    "eslint-config-standard-with-typescript": "^20.0.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
     "husky": "^4.3.8",
     "jest": "^25.1.0",
     "lint-staged": "^10.5.3",
@@ -82,5 +87,11 @@
     "hooks": {
       "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx,js,jsx,json}": [
+      "prettier --write",
+      "eslint --fix"
+    ]
   }
 }
