--- a/package.json
+++ b/package.json
@@ -31,25 +31,22 @@
     "react-native-screens": "^2.17.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
+    "redux-mock-store": "^1.5.4",
     "redux-saga": "^1.1.3",
     "yup": "^0.32.8"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.8.4",
-    "@react-native-community/eslint-config": "^1.1.0",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "@testing-library/react-native": "^7.2.0",
     "@types/jest": "^25.2.3",
     "@types/react-native": "^0.63.2",
     "@types/react-redux": "^7.1.16",
     "@types/react-test-renderer": "^16.9.2",
-    "@typescript-eslint/eslint-plugin": "^4.14.2",
-    "@typescript-eslint/parser": "^4.14.2",
+    "@types/redux-mock-store": "^1.0.3",
     "babel-jest": "^25.1.0",
-    "eslint": "^6.8.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint": "^7.14.0",
     "husky": "^4.3.8",
     "jest": "^25.1.0",
     "lint-staged": "^10.5.3",
@@ -62,6 +59,12 @@
   },
   "jest": {
     "preset": "react-native",
+    "setupFiles": [
+      "<rootDir>/src/setupTests.ts"
+    ],
+    "modulePaths": [
+      "<rootDir>"
+    ],
     "moduleFileExtensions": [
       "ts",
       "tsx",
@@ -69,14 +72,12 @@
       "jsx",
       "json",
       "node"
-    ]
-  },
-  "lint-staged": {
-    "src/**/*.{ts,tsx}": [
-      "eslint --ext .tsx --ext .ts src/ --fix"
     ],
-    "./src/**": [
-      "prettier --write ."
+    "transformIgnorePatterns": [
+      "/node_modules/(?!react-native|@react-native|@react-navigation|node_modules/(?!((jest-)?react-native(-.*)?|@react-native(-community)?)/))"
+    ],
+    "testPathIgnorePatterns": [
+      "/__utils__/"
     ]
   },
   "husky": {
